--- a/Cargo.toml
+++ b/Cargo.toml
@@ -175,81 +175,137 @@ aptos-build-info = { path = "crates/aptos-build-info" }
 aptos-compression = { path = "crates/aptos-compression" }
 aptos-config = { path = "config" }
 aptos-crypto = { path = "crates/aptos-crypto" }
+aptos-crypto-derive = { path = "crates/aptos-crypto-derive" }
 aptos-data-client = { path = "state-sync/aptos-data-client" }
+aptos-fh-stream = { path = "ecosystem/sf-indexer/firehose-stream" }
 aptos-gas = { path = "aptos-move/aptos-gas" }
 aptos-genesis = { path = "crates/aptos-genesis" }
+aptos-global-constants = { path = "config/global-constants" }
 aptos-id-generator = { path = "crates/aptos-id-generator" }
+aptos-indexer = { path = "crates/indexer" }
 aptos-infallible = { path = "crates/aptos-infallible" }
+aptos-keygen = { path = "crates/aptos-keygen" }
 aptos-logger = { path = "crates/aptos-logger" }
 aptos-mempool = { path = "mempool" }
 aptos-metrics-core = { path = "crates/aptos-metrics-core" }
+aptos-network-checker = { path = "crates/aptos-network-checker" }
+aptos-node-checker = { path = "ecosystem/node-checker" }
 aptos-openapi = { path = "crates/aptos-openapi" }
 aptos-proptest-helpers = { path = "crates/aptos-proptest-helpers" }
+aptos-protos = { path = "crates/aptos-protos" }
+aptos-rest-client = { path = "crates/aptos-rest-client" }
 aptos-sdk = { path = "sdk" }
+aptos-secure-net = { path = "secure/net" }
+aptos-secure-storage = { path = "secure/storage" }
 aptos-state-view = { path = "storage/state-view" }
+aptos-telemetry = { path = "crates/aptos-telemetry" }
 aptos-temppath = { path = "crates/aptos-temppath" }
 aptos-time-service = { path = "crates/aptos-time-service" }
 aptos-types = { path = "types" }
+aptos-vault-client = { path = "secure/storage/vault" }
 aptos-vm = { path = "aptos-move/aptos-vm" }
 aptosdb = { path = "storage/aptosdb" }
+backup-service = { path = "storage/backup/backup-service" }
 bounded-executor = { path = "crates/bounded-executor" }
 cached-packages = { path = "aptos-move/framework/cached-packages" }
 channel = { path = "crates/channel" }
+consensus = { path = "consensus" }
 consensus-notifications = { path = "state-sync/inter-component/consensus-notifications" }
+consensus-types = { path = "consensus/consensus-types" }
+crash-handler = { path = "crates/crash-handler" }
 data-streaming-service = { path = "state-sync/state-sync-v2/data-streaming-service" }
 event-notifications = { path = "state-sync/inter-component/event-notifications" }
 executor = { path = "execution/executor" }
 executor-test-helpers = { path = "execution/executor-test-helpers" }
 executor-types = { path = "execution/executor-types" }
+fallible = { path = "crates/fallible" }
+framework = { path = "aptos-move/framework" }
+inspection-service = { path = "crates/inspection-service" }
 mempool-notifications = { path = "state-sync/inter-component/mempool-notifications" }
 netcore = { path = "network/netcore" }
 network = { path = "network" }
+network-builder = { path = "network/builder" }
+safety-rules = { path = "consensus/safety-rules" }
 schemadb = { path = "storage/schemadb" }
 scratchpad = { path = "storage/scratchpad" }
 short-hex-str = { path = "crates/short-hex-str" }
+state-sync-driver = { path = "state-sync/state-sync-v2/state-sync-driver" }
 storage-interface = { path = "storage/storage-interface" }
 storage-service-client = { path = "state-sync/storage-service/client" }
 storage-service-server = { path = "state-sync/storage-service/server" }
 storage-service-types = { path = "state-sync/storage-service/types" }
+transaction-emitter-lib = { path = "crates/transaction-emitter-lib" }
 vm-genesis = { path = "aptos-move/vm-genesis" }
 vm-validator = { path = "vm-validator" }
 
 # External crate dependencies.
 # Please do not add any test features here: they should be declared by the individual crate.
-anyhow = "1.0.57"
+anyhow = "1.0.62"
+async-stream = "0.3"
 async-trait = "0.1.53"
+base64 = "0.13.0"
 bcs = { git = "https://github.com/aptos-labs/bcs", rev = "2cde3e8446c460cb17b0c1d6bac7e27e964ac169" }
+bigdecimal = { version = "0.3.0", features = ["serde"] }
+byteorder = "1.4.3"
 bytes = "1.1.0"
+chrono = { version = "0.4.19", features = ["clock", "serde"] }
 claims = "0.7"
-clap = "3.1.17"
+clap = "3.2.17"
+const_format = "0.2.26"
+criterion = "0.3.5"
+diesel = { version = "1.4.8", features = ["chrono", "postgres", "r2d2", "numeric", "serde_json"] }
+diesel_migrations = { version = "1.4.0", features = ["postgres"] }
 enum_dispatch = "0.3.8"
+env_logger = "0.9.0"
 fail = "0.5.0"
-futures = "0.3.21"
+field_count = "0.1.1"
+futures = "= 0.3.24" # Previously futures v0.3.23 caused some consensus network_tests to fail. We now pin the dependency to v0.3.24.
+futures-channel = "= 0.3.24"
+gcp-bigquery-client = "0.13.0"
+get_if_addrs = "0.5.3"
 goldenfile = "1.1.0"
 hex = "0.4.3"
-hyper = "0.14.18"
+http = "0.2.3"
+hyper = { version = "0.14.18", features = ["full"] }
 indoc = "1.0.6"
 itertools = "0.10.3"
+jemallocator = { version = "0.3.2", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
+log = "0.4.17"
 lru = "0.7.5"
 maplit = "1.0.2"
 mime = "0.3.16"
+mirai-annotations = "1.12.0"
 mockall = "0.11.0"
+num-derive = "0.3.3"
 num-traits = "0.2.15"
 once_cell = "1.10.0"
 paste = "1.0.7"
+pbjson = "0.4.0"
 percent-encoding = "2.1.0"
 poem = { version = "1.3.40", features = ["anyhow", "rustls"] }
-poem-openapi = { version = "2.0.10", features = ["url"] }
+poem-openapi = { version = "2.0.10", features = ["swagger-ui", "url"] }
+prometheus-parse = "0.2.2"
 proptest = "1.0.0"
+prost = "0.10.4"
+prost-types = "0.10.1"
 rand = "0.7.3"
+rayon = "1.5.2"
 regex = "1.5.5"
-reqwest = { version = "0.11.10", features = ["blocking", "json"] }
-serde = { version = "1.0.137", features = ["derive"] }
+reqwest = { version = "0.11.11", features = ["blocking", "cookies", "json"] }
+reqwest-middleware = "0.1.6"
+reqwest-retry = "0.1.5"
+rusty-fork = "0.3.0"
+serde = { version = "1.0.137", features = ["derive", "rc"] }
 serde_json = { version = "1.0.81", features = ["preserve_order"] }
+serde_yaml = "0.8.24"
+substreams = "0.0.17"
+tempfile = "3.3.0"
 thiserror = "1.0.31"
 tokio = { version = "1.21.0", features = ["full"] }
+tokio-retry = "0.3.0"
 tokio-stream = "0.1.8"
-url = "2.2.2"
+tonic = { version = "0.7.2", features = ["tls-roots", "transport", "prost", "compression", "codegen"] }
+url = { version = "2.2.2", features = ["serde"] }
 warp = { version = "0.3.2" }
 warp-reverse-proxy = "0.5.0"
 
