--- a/Cargo.toml
+++ b/Cargo.toml
@@ -184,6 +184,7 @@ aptos-global-constants = { path = "config/global-constants" }
 aptos-id-generator = { path = "crates/aptos-id-generator" }
 aptos-indexer = { path = "crates/indexer" }
 aptos-infallible = { path = "crates/aptos-infallible" }
+aptos-jellyfish-merkle = { path = "storage/jellyfish-merkle" }
 aptos-keygen = { path = "crates/aptos-keygen" }
 aptos-logger = { path = "crates/aptos-logger" }
 aptos-mempool = { path = "mempool" }
@@ -193,6 +194,8 @@ aptos-node-checker = { path = "ecosystem/node-checker" }
 aptos-openapi = { path = "crates/aptos-openapi" }
 aptos-proptest-helpers = { path = "crates/aptos-proptest-helpers" }
 aptos-protos = { path = "crates/aptos-protos" }
+aptos-push-metrics = { path = "crates/aptos-push-metrics" }
+aptos-rate-limiter = { path = "crates/aptos-rate-limiter" }
 aptos-rest-client = { path = "crates/aptos-rest-client" }
 aptos-sdk = { path = "sdk" }
 aptos-secure-net = { path = "secure/net" }
@@ -200,7 +203,7 @@ aptos-secure-storage = { path = "secure/storage" }
 aptos-state-view = { path = "storage/state-view" }
 aptos-telemetry = { path = "crates/aptos-telemetry" }
 aptos-temppath = { path = "crates/aptos-temppath" }
-aptos-time-service = { path = "crates/aptos-time-service" }
+aptos-time-service = { path = "crates/aptos-time-service", features = ["async"] }
 aptos-types = { path = "types" }
 aptos-vault-client = { path = "secure/storage/vault" }
 aptos-vm = { path = "aptos-move/aptos-vm" }
@@ -222,9 +225,14 @@ fallible = { path = "crates/fallible" }
 framework = { path = "aptos-move/framework" }
 inspection-service = { path = "crates/inspection-service" }
 mempool-notifications = { path = "state-sync/inter-component/mempool-notifications" }
+memsocket = { path = "network/memsocket" }
 netcore = { path = "network/netcore" }
 network = { path = "network" }
 network-builder = { path = "network/builder" }
+network-discovery = { path = "network/discovery" }
+num-variants = { path = "crates/num-variants" }
+peer-monitoring-service-types = { path = "network/peer-monitoring-service/types" }
+proxy = { path = "crates/proxy" }
 safety-rules = { path = "consensus/safety-rules" }
 schemadb = { path = "storage/schemadb" }
 scratchpad = { path = "storage/scratchpad" }
@@ -261,12 +269,14 @@ fail = "0.5.0"
 field_count = "0.1.1"
 futures = "= 0.3.24" # Previously futures v0.3.23 caused some consensus network_tests to fail. We now pin the dependency to v0.3.24.
 futures-channel = "= 0.3.24"
+futures-util = "0.3.21"
 gcp-bigquery-client = "0.13.0"
 get_if_addrs = "0.5.3"
 goldenfile = "1.1.0"
 hex = "0.4.3"
 http = "0.2.3"
 hyper = { version = "0.14.18", features = ["full"] }
+indicatif = "0.15.0"
 indoc = "1.0.6"
 itertools = "0.10.3"
 jemallocator = { version = "0.3.2", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
@@ -276,19 +286,23 @@ maplit = "1.0.2"
 mime = "0.3.16"
 mirai-annotations = "1.12.0"
 mockall = "0.11.0"
+num_cpus = "1.13.1"
 num-derive = "0.3.3"
 num-traits = "0.2.15"
 once_cell = "1.10.0"
 paste = "1.0.7"
 pbjson = "0.4.0"
 percent-encoding = "2.1.0"
+pin-project = "1.0.10"
 poem = { version = "1.3.40", features = ["anyhow", "rustls"] }
 poem-openapi = { version = "2.0.10", features = ["swagger-ui", "url"] }
 prometheus-parse = "0.2.2"
 proptest = "1.0.0"
+proptest-derive = "0.3.0"
 prost = "0.10.4"
 prost-types = "0.10.1"
 rand = "0.7.3"
+rand_core = "0.5.1"
 rayon = "1.5.2"
 regex = "1.5.5"
 reqwest = { version = "0.11.11", features = ["blocking", "cookies", "json"] }
@@ -296,14 +310,18 @@ reqwest-middleware = "0.1.6"
 reqwest-retry = "0.1.5"
 rusty-fork = "0.3.0"
 serde = { version = "1.0.137", features = ["derive", "rc"] }
+serde_bytes = "0.11.6"
 serde_json = { version = "1.0.81", features = ["preserve_order"] }
 serde_yaml = "0.8.24"
+structopt = "0.3.21"
 substreams = "0.0.17"
 tempfile = "3.3.0"
 thiserror = "1.0.31"
 tokio = { version = "1.21.0", features = ["full"] }
 tokio-retry = "0.3.0"
 tokio-stream = "0.1.8"
+tokio-util = { version = "0.7.2", features = ["compat", "codec"] }
+toml = "0.5.9"
 tonic = { version = "0.7.2", features = ["tls-roots", "transport", "prost", "compression", "codegen"] }
 url = { version = "2.2.2", features = ["serde"] }
 warp = { version = "0.3.2" }
