--- a/testsuite/forge-cli/Cargo.toml
+++ b/testsuite/forge-cli/Cargo.toml
@@ -19,6 +19,7 @@ structopt = "0.3.21"
 tokio = { version = "1.21.0", features = ["full"] }
 url = "2.2.2"
 
+aptos-config = { path = "../../config" }
 aptos-global-constants = { path = "../../config/global-constants" }
 aptos-logger = { path = "../../crates/aptos-logger" }
 aptos-rest-client = { path = "../../crates/aptos-rest-client" }
