--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -66,6 +66,9 @@ jobs:
           version: 7.14.2
       - run: pnpm lint
         working-directory: developer-docs-site
+      - run: sudo apt update -y && sudo apt install -y aspell aspell-en
+      - run: pnpm spellcheck
+        working-directory: developer-docs-site
 
   rust-cryptohasher-domain-separation-check:
     runs-on: high-perf-docker
