--- a/Cargo.toml
+++ b/Cargo.toml
@@ -285,6 +285,7 @@ again = "0.1.2"
 anyhow = "1.0.62"
 arc-swap = "1.5.0"
 arr_macro = "0.1.3"
+assert_approx_eq = "1.1.0"
 assert_unordered = "0.1.1"
 async-stream = "0.3"
 async-trait = "0.1.53"
@@ -380,7 +381,7 @@ pretty_assertions = "1.2.1"
 procfs = "0.14.1"
 proc-macro2 = "1.0.38"
 project-root = "0.2.2"
-prometheus = "=0.13.0"
+prometheus = { version = "0.13.0", default-features = false }
 prometheus-http-query = "0.5.2"
 prometheus-parse = "0.2.2"
 proptest = "1.0.0"
@@ -421,7 +422,7 @@ strum = "0.24.1"
 strum_macros = "0.24.2"
 structopt = "0.3.21"
 substreams = "0.0.17"
-syn = { version = "1.0.92", features = ["derive"] }
+syn = { version = "1.0.92", features = ["derive", "extra-traits"] }
 sysinfo = "0.24.2"
 tempfile = "3.3.0"
 termcolor = "1.1.2"
