[consensus][e2e] Add e2e smoke test for changing onchain config and voting history fix (#5594)

--- a/testsuite/smoke-test/Cargo.toml
+++ b/testsuite/smoke-test/Cargo.toml
@@ -15,6 +15,7 @@ rust-version = { workspace = true }
 [dependencies]
 anyhow = { workspace = true }
 aptos = { workspace = true, features = ["fuzzing"] }
+aptos-bitvec = { path = "../../crates/aptos-bitvec" }
 aptos-config = { workspace = true }
 aptos-crypto = { workspace = true }
 aptos-debugger = { workspace = true }
