--- a/aptos-move/e2e-move-tests/Cargo.toml
+++ b/aptos-move/e2e-move-tests/Cargo.toml
@@ -16,7 +16,7 @@ rust-version = { workspace = true }
 anyhow = { workspace = true }
 aptos = { workspace = true }
 aptos-crypto = { workspace = true }
-aptos-gas = { workspace = true }
+aptos-gas = { workspace = true, features = ["testing"] }
 aptos-keygen = { workspace = true }
 aptos-logger = { workspace = true }
 aptos-parallel-executor = { workspace = true }
