[mergify] check title reflects skipped status (#5713)

--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -33,6 +33,8 @@ pull_request_rules:
           {% if not check_succeed %}
           {% if check_pending|length > 0 %}
           Some checks are still pending...
+          {% elif check_skipped|length > 0 %}
+          Some checks were skipped (try rebasing, toggling automerge, or applying the corresponding labels)...
           {% else %}
           Tests failed
           {% endif %}
