--- a/Cargo.toml
+++ b/Cargo.toml
@@ -322,6 +322,7 @@ digest = "0.9.0"
 dir-diff = "0.3.2"
 dirs = "4.0.0"
 ed25519-dalek = { version = "1.0.1", features = ["std", "serde"] }
+ed25519-dalek-bip32 = "0.2.0"
 either = "1.6.1"
 enum_dispatch = "0.3.8"
 env_logger = "0.9.0"
@@ -428,6 +429,7 @@ tempfile = "3.3.0"
 termcolor = "1.1.2"
 textwrap = "0.15.0"
 thiserror = "1.0.31"
+tiny-bip39 = "0.8.2"
 tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }
 tracing = "0.1.34"
 tracing-subscriber = "0.3.11"
