--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -20,9 +20,11 @@ aptos-rest-client = { workspace = true }
 aptos-types = { workspace = true }
 bcs = { workspace = true }
 cached-packages = { workspace = true }
+ed25519-dalek-bip32 = { workspace = true }
 move-core-types = { workspace = true }
 rand_core = { workspace = true }
 serde = { workspace = true }
+tiny-bip39 = { workspace = true }
 
 [dev-dependencies]
 once_cell = { workspace = true }
