[crates] Rename accumulator to aptos-accumulator (#5785)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -166,8 +166,8 @@ rust-version = "1.64"
 [workspace.dependencies]
 # Internal crate dependencies.
 # Please do not add any test features here: they should be declared by the individual crate.
-accumulator = { path = "storage/accumulator" }
 aptos = { path = "crates/aptos" }
+aptos-accumulator = { path = "storage/accumulator" }
 aptos-aggregator = { path = "aptos-move/aptos-aggregator" }
 aptos-api = { path = "api" }
 aptos-api-test-context = { path = "api/test-context" }
