--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -147,6 +147,7 @@ jobs:
       # We always try to create the artifact, but it only creates on flaky or failed smoke tests -- when the directories are empty.
       - name: Upload smoke test logs for failed and flaky tests
         uses: actions/upload-artifact@v3
+        if: ${{ failure() || success() }}
         with:
           name: failed-smoke-test-logs
           # Retain all smoke test data except for the db (which may be large).
