--- a/.github/workflows/replay-verify-testnet.yaml
+++ b/.github/workflows/replay-verify-testnet.yaml
@@ -8,7 +8,7 @@ on:
         type: string
         description: The git SHA1 to test. If not specified, Forge will check the latest commits on the current branch
   schedule:
-    - cron: "5 9/12 * * *"
+    - cron: "5 9,21 * * *" # notice this is UTC, which is 1am/1pm PST and 2am/2pm PDT; starting at the 5th minute to prioritize the mainnet replay
   pull_request:
     paths:
       - ".github/workflows/nightly-replay-verify.yaml"
