--- a/Cargo.toml
+++ b/Cargo.toml
@@ -308,7 +308,7 @@ claims = "0.7"
 clap = { version = "3.2.17", features = ["derive", "env", "suggestions"] }
 clap_complete = "3.2.3"
 codespan-reporting = "0.11.1"
-console-subscriber = "0.1.6"
+console-subscriber = "0.1.8"
 const_format = "0.2.26"
 criterion = "0.3.5"
 criterion-cpu-time = "0.1.0"
@@ -445,6 +445,7 @@ tracing = "0.1.34"
 tracing-subscriber = "0.3.11"
 trybuild = "1.0.41"
 tokio = { version = "1.21.0", features = ["full"] }
+tokio-metrics = "0.1.0"
 tokio-retry = "0.3.0"
 tokio-stream = "0.1.8"
 tokio-test = "0.4.1"
