[storage] add backup compaction

--- a/storage/backup/backup-cli/src/storage/command_adapter/sample_configs/azure.sample.yaml
+++ b/storage/backup/backup-cli/src/storage/command_adapter/sample_configs/azure.sample.yaml
@@ -31,3 +31,7 @@ commands:
     # list files under the metadata folder
     (azcopy ls "https://$ACCOUNT.blob.core.windows.net/$CONTAINER/$SUB_DIR/metadata/$SAS" ||:) \
     | sed -ne "s#; .*##;s#INFO: \(.*\.meta\)#metadata/\1#p"
+  backup_metadata_file: |
+    # move metadata files 
+    azcopy sync "https://$ACCOUNT.blob.core.windows.net/$CONTAINER/$SUB_DIR/metadata/$FILE_NAME$SAS" "https://$ACCOUNT.blob.core.windows.net/$CONTAINER/$SUB_DIR/metadata_backup/$FILE_NAME$SAS" --move=true
+
