--- a/storage/backup/backup-cli/src/storage/command_adapter/sample_configs/local_folder.sample.yaml
+++ b/storage/backup/backup-cli/src/storage/command_adapter/sample_configs/local_folder.sample.yaml
@@ -8,3 +8,4 @@ commands:
   open_for_read: 'cat "$FOLDER/$FILE_HANDLE" | gzip -cd'
   save_metadata_line: 'cd "$FOLDER" && mkdir -p metadata && cd metadata && gzip -c > $FILE_NAME'
   list_metadata_files: 'cd "$FOLDER" && (test -d metadata && cd metadata && ls -1 || exec) | while read f; do echo metadata/$f; done'
+  backup_metadata_file: 'cd "$FOLDER" && mkdir -p metadata_backup && mv metadata/$FILE_NAME metadata_backup/$FILE_NAME'
