--- a/storage/backup/backup-cli/src/storage/command_adapter/sample_configs/s3.sample.yaml
+++ b/storage/backup/backup-cli/src/storage/command_adapter/sample_configs/s3.sample.yaml
@@ -25,3 +25,7 @@ commands:
   list_metadata_files: |
     # list files under the metadata folder
     (aws s3 ls s3://$BUCKET/$SUB_DIR/metadata/ ||:) | sed -ne "s#.* \(.*\)#metadata/\1#p"
+  backup_metadata_file: |
+    # move metadata file to metadata backup folder
+    aws s3 mv s3://$BUCKET/$SUB_DIR/metadata/$FILE_NAME s3://$BUCKET/$SUB_DIR/metadata_backup/$FILE_NAME --no-progress
+    
