--- a/terraform/helm/fullnode/files/backup/scw_s3.yaml
+++ b/terraform/helm/fullnode/files/backup/scw_s3.yaml
@@ -9,3 +9,4 @@ commands:
   open_for_read: 'aws --endpoint-url="$ENDPOINT_URL" s3 cp "s3://$BUCKET/$SUB_DIR/$FILE_HANDLE" - | gzip -cd'
   save_metadata_line: 'gzip -c | aws --endpoint-url="$ENDPOINT_URL" s3 cp - "s3://$BUCKET/$SUB_DIR/metadata/$FILE_NAME"'
   list_metadata_files: '(aws --endpoint-url="$ENDPOINT_URL" s3 ls s3://$BUCKET/$SUB_DIR/metadata/ ||:) | sed -ne "s#.* \(.*\)#metadata/\1#p"'
+  backup_metadata_file: 'aws --endpoint-url="$ENDPOINT_URL" s3 mv s3://$BUCKET/$SUB_DIR/metadata/$FILE_NAME s3://$BUCKET/$SUB_DIR/metadata_backup/$FILE_NAME --no-progress'
