--- a/Cargo.toml
+++ b/Cargo.toml
@@ -332,6 +332,7 @@ dashmap = "5.2.0"
 datatest-stable = "0.1.1"
 deadpool-redis = "0.8.0"
 debug-ignore = { version = "1.0.3", features = ["serde"] }
+derivative = "2.2.0"
 diesel = { version = "2.0.0", features = ["chrono", "postgres", "r2d2", "numeric", "serde_json"] }
 diesel_migrations = { version = "2.0.0", features = ["postgres"] }
 digest = "0.9.0"
