--- a/.github/workflows/docker-build-test.yaml
+++ b/.github/workflows/docker-build-test.yaml
@@ -42,6 +42,7 @@ on: # build on main branch OR when a PR is labeled with `CICD:build-images`
       - testnet
       - mainnet
       - aptos-node-v*
+      - performance_benchmark
 
 # cancel redundant builds
 concurrency:
