--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -67,7 +67,7 @@
 /dashboards/ @aptos-labs/prod-eng
 
 # Owners for the `/developer-docs-site` directory and all its subdirectories.
-/developer-docs-site/ @davidiw @clay-aptos @gregnazario
+/developer-docs-site/ @davidiw @clay-aptos @gregnazario @christian-aptos
 
 # Owner for docs tutorials for the token_standard and related tutorials.
 /developer-docs-site/docs/tutorials @areshand @gregnazario
