--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -69,6 +69,9 @@
 # Owners for the `/developer-docs-site` directory and all its subdirectories.
 /developer-docs-site/ @davidiw @clay-aptos @gregnazario @christian-aptos
 
+# Auto-reviewers for all Markdown changes including READMEs
+*.md @clay-aptos @christian-aptos
+
 # Owner for docs tutorials for the token_standard and related tutorials.
 /developer-docs-site/docs/tutorials @areshand @gregnazario
 
