--- a/.github/workflows/links.yml
+++ b/.github/workflows/links.yml
@@ -8,6 +8,11 @@ on:
   schedule:
     - cron: "00 18 * * *"
 
+permissions: 
+   # contents: write # only for delete-branch option 
+   issues: write 
+   pull-requests: write 
+
 jobs:
   linkChecker:
     runs-on: ubuntu-latest
