--- a/crates/aptos/Cargo.toml
+++ b/crates/aptos/Cargo.toml
@@ -59,7 +59,7 @@ move-package = { workspace = true }
 move-prover = { workspace = true }
 move-prover-boogie-backend = { workspace = true }
 move-symbol-pool = { workspace = true }
-move-unit-test = { workspace = true }
+move-unit-test = { workspace = true, features = [ "debugging" ] }
 move-vm-runtime = { workspace = true, features = [ "testing" ] }
 rand = { workspace = true }
 regex = { workspace = true }
